[metadata]
name = pep7
version = 0.1
author = Julien Miotte
author_email = mike.perdide@gmail.com
keywords = pep7, style, 
project_url = 'http://github.com/mike-perdide/pep7'
requires_python = >=2.7
description_file = README.rst
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Intended Audience :: Developers
    Programming Language :: Python

[files]
scripts =
    pep7.py

data_files =
    pep7 =
        COPYING
        README.rst
        setup.cfg
        setup.py
